# montana-wildfire

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/explore/: sent2_explore.ipynb
